# Sensor-Sync

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/syn_cpp/: BBoxData.h  BboxData.h
devel/lib/pkgconfig/: syn_cpp.pc  syn_py.pc
devel/lib/python3/dist-packages/syn_cpp/msg/: _BBoxData.py  _BboxData.py  __init__.py
devel/lib/syn_cpp/: calibration_test  json_pub_node  sync  sync_imgs_only
devel/share/common-lisp/ros/syn_cpp/msg/: BBoxData.lisp  BboxData.lisp  _package.lisp  _package_BBoxData.lisp  _package_BboxData.lisp  syn_cpp-msg.asd
devel/share/gennodejs/ros/syn_cpp/msg/: BBoxData.js  BboxData.js  _index.js
devel/share/roseus/ros/syn_cpp/: manifest.l
devel/share/syn_cpp/cmake/: syn_cpp-msg-paths.cmake  syn_cppConfig.cmake
devel/share/syn_py/cmake/: syn_pyConfig.cmake
src/syn_cpp/: CMakeLists.txt
src/syn_cpp/launch/: calibration_test.launch  sync_cameras.launch  sync_sensors.launch
src/syn_cpp/msg/: Bbox.msg  BboxData.msg  Track.msg
src/syn_cpp/rviz/: rpf_bench_calibration.rviz
src/syn_cpp/scripts/: calibration_transform.py  imgs2video.py  record_mouse_traj.py  sync_image_pcs.py  visualize.py
src/syn_cpp/src/: calibration_test.cpp  json_pub_node.cpp  pano2cyl.cpp  sync.cpp  sync_imgs_only.cpp  translation_test.py
src/syn_py/: CMakeLists.txt
src/syn_py/launch/: fliter.launch  projection.launch
src/syn_py/rviz/: fliter_node.rviz  projection_node.rviz
src/syn_py/scripts/: fliter  fliter2  fliter_node  pointcloud_show  points_1735036773_440928.pcd  projection_node  tips
(+2 files in other folders)
